<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimaryBackground"
              android:gravity="center"
              android:paddingLeft="20dp"
              android:paddingRight="20dp"
              tools:context=".view.UserLoginActivity">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:minHeight="100dp"
            android:src="@mipmap/ic_logo"
            android:contentDescription="LOGO"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="45sp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorFormBackground"
            android:orientation="vertical"
            android:padding="10dp">

        <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digite_seu_email"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill"/>

        <EditText
                android:id="@+id/editTextSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:hint="@string/digite_sua_senha"
                android:inputType="textPassword"
                tools:ignore="Autofill"/>

        <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBotão"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                android:textColor="@color/colorFormBackground"/>

        <Button
                android:id="@+id/btn_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBotão"
                android:layout_marginTop="10dp"
                android:text="@string/botaoCadastrar"
                android:textColor="@color/colorFormBackground"/>

        <TextView
                android:id="@+id/textSemCadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:linksClickable="true"
                android:text="@string/esqueceuSenha"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/secondary_text_dark"/>

    </LinearLayout>
</LinearLayout>