<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
              android:padding="30dp"
              android:background="@color/colorPrimaryBackground"
              tools:context=".view.MainActivity">

    <ImageView
            android:id="@+id/ImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:minHeight="100dp"
            android:src="@mipmap/ic_logo"/>

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorFormBackground"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center">

        <TextView
                android:id="@+id/editTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:hint="@string/app_name"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="36sp"
                android:fontFamily="monospace"
                android:textAlignment="center"
                android:textAllCaps="false"/>

        <TextView
                android:id="@+id/editTextSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstMessage"
                android:fontFamily="sans-serif"
                android:textSize="30sp"
                android:textAlignment="center"/>

        <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textAlignment="center"
                android:fontFamily="sans-serif"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_login_init"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/botaoLogin"
                android:textAllCaps="false"
                android:textAlignment="center"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorFormBackground"/>

        <Button
                android:id="@+id/btn_cadastrar_init"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/botaoCadastrar"
                android:textAlignment="center"
                android:textColor="@color/colorFormBackground"
                android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>